bug 598683 - Bad XML with unterminated node with namespace not throwing correctly (+r steven lars)